# selji-zero-noise

./: .gitignore  LICENSE  PUBLISHING.md  README.md
node/: README.md  package.json
node/src/: buildAmazonQuery.js  confidenceScore.js  detectReviewNoise.js  index.js
python/: LICENSE  README.md  pyproject.toml
python/selji_zero_noise/: __init__.py  cli.py  confidence.py  noise.py  query.py
